fixed flicker issue on hover

--- a/_sass/_blocks.scss
+++ b/_sass/_blocks.scss
@@ -1901,6 +1901,8 @@
   }
 }
 
+// Jobs
+
 .jobs {
   padding-top: spacing(4);
   padding-bottom: spacing(4);
@@ -1933,6 +1935,7 @@
 
     h3 {
       font-size: map-get($font-scale, 2);
+      pointer-events: none;
       line-height: 1;
       margin: 0;
 
